@@ -19,6 +19,11 @@
 
 #include "Debug.h"
 #include "MountPointManager.h"
+#include "statusbar/StatusBar.h"
+
+#include <kio/job.h>
+#include <kio/jobclasses.h>
+#include <kio/deletejob.h>
 
 #include <QDir>
 #include <QFile>
@@ -38,7 +43,7 @@ FileCollectionLocation::~FileCollectionLocation()
 bool
 FileCollectionLocation::isWritable() const
 {
-    return false;
+    return true;
 }
 
 bool
@@ -55,7 +60,8 @@ FileCollectionLocation::remove( const Meta::TrackPtr &track )
     if( !track )
         return false;
 
-    bool removed = QFile::remove( track->playableUrl().path() );
+    // if the file doesn't exist, we want to do dir cleanup
+    bool removed = !QFile::exists( track->playableUrl().path()  ) || QFile::remove( track->playableUrl().path() );
 
     if( removed )
     {
@@ -72,6 +78,74 @@ FileCollectionLocation::remove( const Meta::TrackPtr &track )
 
     }
     return removed;
+}
+bool FileCollectionLocation::startNextRemoveJob()
+{
+    DEBUG_BLOCK
+    while ( !m_removetracks.isEmpty() )
+    {
+        Meta::TrackPtr track = m_removetracks.takeFirst();
+        KUrl src = track->playableUrl();
+
+        KIO::DeleteJob *job = 0;
+
+        src.cleanPath();
+        debug() << "deleting  " << src;
+        KIO::JobFlags flags = KIO::HideProgressInfo;
+        job = KIO::del( src, flags );
+        if( job )   //just to be safe
+        {
+            connect( job, SIGNAL( result(KJob*) ), SLOT( slotRemoveJobFinished(KJob*) ) );
+            QString name = track->prettyName();
+            if( track->artist() )
+                name = QString( "%1 - %2" ).arg( track->artist()->name(), track->prettyName() );
+
+            The::statusBar()->newProgressOperation( job, i18n( "Removing: %1", name ) );
+            m_removejobs.insert( job, track );
+            continue;
+        }
+        break;
+    }
+    return false;
+}
+
+void FileCollectionLocation::slotRemoveJobFinished(KJob* job)
+{
+    DEBUG_BLOCK
+    if( job->error() )
+    {
+        warning() << "An error occurred when removing a file: " << job->errorString();
+        transferError( m_removejobs.value( job ), KIO::buildErrorString( job->error(), job->errorString() ) );
+    }
+    else
+    {
+        // The file is deleted, but do dir cleanup
+        remove( m_removejobs.value( job ) );
+
+        //we  assume that KIO works correctly...
+        transferSuccessful( m_removejobs.value( job ) );
+    }
+
+    m_removejobs.remove( job );
+    job->deleteLater();
+
+    if( !startNextRemoveJob() )
+    {
+        slotRemoveOperationFinished();
+    }
+}
+
+
+void FileCollectionLocation::removeUrlsFromCollection(const Meta::TrackList& sources)
+{
+    DEBUG_BLOCK
+    m_removetracks = sources;
+
+    debug() << "removing " << m_removetracks.size() << "tracks";
+    if( !startNextRemoveJob() ) //this signal needs to be called no matter what, even if there are no job finishes to call it
+    {
+        slotRemoveOperationFinished();
+    }
 }
 
 #include "FileCollectionLocation.moc"
